tests/generics_fn_type_args_bad.stderr
tests/generics_fn_type_args_bad.hop:6:2: error: HOP2004: type mismatch
